Залил кнопку фильтрации

--- a/src/pug/layouts/_two-columns.pug
+++ b/src/pug/layouts/_two-columns.pug
@@ -38,15 +38,15 @@ html(lang="ru")
                                                 use(href="#vector")
                                     ul.dashboard__menu-list.dashboard__menu-list--active
                                         li.dashboard__menu-item
-                                            a.dashboard__menu-link.dashboard__menu-link--active(href='#') Дашборд
+                                            a.dashboard__menu-link.dashboard__menu-link--active(href='dashboard.html') Дашборд
                                                 svg(width='36' height='36')
                                                     use(href="#dashboard")
                                         li.dashboard__menu-item
-                                            a.dashboard__menu-link(href='#') Редактировать профиль
+                                            a.dashboard__menu-link(href='profile-settings.html') Редактировать профиль
                                                 svg(width='36' height='36')
                                                     use(href="#profile")
                                         li.dashboard__menu-item
-                                            a.dashboard__menu-link(href='#') Уведомления
+                                            a.dashboard__menu-link(href='notifications.html') Уведомления
                                                 svg(width='36' height='36')
                                                     use(href="#notifications")
                                                 span.dashboard__notification-counter 1
@@ -59,15 +59,15 @@ html(lang="ru")
                                                 use(href="#vector")
                                     ul.dashboard__menu-list
                                         li.dashboard__menu-item
-                                            a.dashboard__menu-link(href='#') Заявки
+                                            a.dashboard__menu-link(href='orders.html') Заявки
                                                 svg(width='36' height='36')
                                                     use(href="#order")
                                         li.dashboard__menu-item
-                                            a.dashboard__menu-link(href='#') Оплата услуг
+                                            a.dashboard__menu-link(href='payments.html') Оплата услуг
                                                 svg(width='36' height='36')
                                                     use(href="#wallet")
                                         li.dashboard__menu-item
-                                            a.dashboard__menu-link(href='#') Мои оплаты
+                                            a.dashboard__menu-link(href='my-payments.html') Мои оплаты
                                                 svg(width='36' height='36')
                                                     use(href="#list")
                                 .dashboard__menu-wrapper
@@ -79,19 +79,19 @@ html(lang="ru")
                                                 use(href="#vector")
                                     ul.dashboard__menu-list
                                         li.dashboard__menu-item
-                                            a.dashboard__menu-link(href='#') Расписание
+                                            a.dashboard__menu-link(href='schedules.html') Расписание
                                                 svg(width='36' height='36')
                                                     use(href="#schedule")
                                         li.dashboard__menu-item
-                                            a.dashboard__menu-link(href='#') Студенческий билет
+                                            a.dashboard__menu-link(href='student-card.html') Студенческий билет
                                                 svg(width='36' height='36')
                                                     use(href="#studentpass")
                                         li.dashboard__menu-item
-                                            a.dashboard__menu-link(href='#') Зачетная книжка
+                                            a.dashboard__menu-link(href='record-book.html') Зачетная книжка
                                                 svg(width='36' height='36')
                                                     use(href="#markbook")
                                         li.dashboard__menu-item
-                                            a.dashboard__menu-link(href='#') Общежития
+                                            a.dashboard__menu-link(href='student-house.html') Общежития
                                                 svg(width='36' height='36')
                                                     use(href="#studenthouse")
                                 .dashboard__menu-wrapper
@@ -103,7 +103,7 @@ html(lang="ru")
                                                 use(href="#vector")
                                     ul.dashboard__menu-list
                                         li.dashboard__menu-item
-                                            a.dashboard__menu-link(href='#') Расписание
+                                            a.dashboard__menu-link(href='schedules.html') Расписание
                                                 svg(width='36' height='36')
                                                     use(href="#schedule")
                                         li.dashboard__menu-item
