--- a/src/pug/sections/dashboard/_dashboard-vacancy.pug
+++ b/src/pug/sections/dashboard/_dashboard-vacancy.pug
@@ -31,8 +31,8 @@ section.vacancy.dashboard__vacancy
     .vacancy__container.container
         .vacancy__header
             h2.vacancy__title.title--large Открытые вакансии портала
-            button(href="#").vacancy__filter-button.btn.btn--regular.js-filter-btn Фильтры
-                svg(width="22" height="22")
+            button.vacancy__filter-button.btn.btn--regular.js-filter-btn Фильтры
+                svg(width="22" height="22" aria-label="Кнопка открытия меню фильтрации вакансий")
                     use(href="#controls")
             .vacancy__filter
                 .vacancy__filter-type
