todo: pixel perfect

--- a/src/pug/sections/_classmates.pug
+++ b/src/pug/sections/_classmates.pug
@@ -2,7 +2,7 @@ section.classmates
     .classmates__container.container
         .classmates__wrapper
             h2.classmates__title.title Одногруппники
-            .classmates__list.card
+            .classmates__list.card.scrollbar-custom
                 .classmates__list-wrapper
                     +user('Ивко Валентина Петросовна', '23 февраля', 'avatar-1.jpg', 'avatar-1.webp', '#')
                     +user('Цепко Харитон Викторович', '24 августа', 'avatar-2.jpg', 'avatar-2.webp', '#')
