--- a/src/pug/sections/_services.pug
+++ b/src/pug/sections/_services.pug
@@ -8,22 +8,22 @@ section.services
                 .swiper-pagination.services-pagination
                 .swiper-button-next.services-button-next
         .services__slider.swiper-wrapper
-            .service.swiper-slide
+            a(href="#").service.swiper-slide
                 h3.service__name Справка об обучении
                 p.service__deadline Срок готовности 3 дня
-            .service.swiper-slide
+            a(href="#").service.swiper-slide
                 h3.service__name Справка об обучении
                 p.service__deadline Срок готовности 3 дня
-            .service.swiper-slide
+            a(href="#").service.swiper-slide
                 h3.service__name Справка об обучении
                 p.service__deadline Срок готовности 3 дня
-            .service.swiper-slide
+            a(href="#").service.swiper-slide
                 h3.service__name Справка об обучении
                 p.service__deadline Срок готовности 3 дня
-            .service.swiper-slide
+            a(href="#").service.swiper-slide
                 h3.service__name Справка об обучении
                 p.service__deadline Срок готовности 3 дня
-            .service.swiper-slide
+            a(href="#").service.swiper-slide
                 h3.service__name Справка об обучении
                 p.service__deadline Срок готовности 3 дня
         .services__navigation
