--- a/src/scss/general/cookie.scss
+++ b/src/scss/general/cookie.scss
@@ -8,8 +8,8 @@
 #cookie {
   position: fixed;
   bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
+  left: 10px;
+  transform: translateX(0);
   z-index: 9999;
   overflow-x: hidden;
   overflow-y: hidden;
