--- a/src/pug/sections/dashboard/_dashboard-vacancy.pug
+++ b/src/pug/sections/dashboard/_dashboard-vacancy.pug
@@ -61,10 +61,10 @@ section.vacancy.dashboard__vacancy
                     .filter__salary(style="position: relative")
                         .filter__range.two-range-slider.js-two-range-slider(style="position: static")
                             .two-range-slider__output
-                                output.two-range-slider__value.js-two-range-slider-min-value.two-range-slider__value--left
-                                output.two-range-slider__value.js-two-range-slider-max-value.two-range-slider__value--right
-                            input.two-range-slider__input.js-two-range-slider-input(type='range' min='0' max='250000' value='250000' step='10000')#right-range
-                            input.two-range-slider__input.js-two-range-slider-input(type='range' min='0' max='250000' value='0' step='10000')#left-range
+                                output.two-range-slider__value.js-two-range-slider-min-value.two-range-slider__value--left.range-money
+                                output.two-range-slider__value.js-two-range-slider-max-value.two-range-slider__value--right.range-money
+                            input.two-range-slider__input.js-two-range-slider-input(type='range' min='0' max='250000' value='250000' step='10000').left-range
+                            input.two-range-slider__input.js-two-range-slider-input(type='range' min='0' max='250000' value='0' step='10000').left-range
         .vacancy__content
             .vacancy__wrapper
                 .vacancy__section.accordeon-section
