--- a/src/scss/blocks/_dashboard.scss
+++ b/src/scss/blocks/_dashboard.scss
@@ -102,6 +102,7 @@
 
 .dashboard__menu-wrapper {
   margin-bottom: 44px;
+  background: #f8fafe;
 }
 
 .dashboard__menu-header {
@@ -110,6 +111,8 @@
   margin-bottom: 20px;
   cursor: pointer;
   transition: .2s;
+
+  z-index: 2;
   &:hover {
     .dashboard__menu-title {
       color: $c-blue;
@@ -161,7 +164,6 @@
   gap: 19px;
   &--active {
     display: flex;
-    animation: toHeight .2s ease-in-out;
   }
 }
 
@@ -232,12 +234,17 @@
     max-height: 272px;
   }
   .portfolio__container {
-    width: 314px;
-    height: 100%;
+    width: 100%;
+    @media (min-width: $tablet) {
+      width: 314px;
+    }
   }
   .classmates__wrapper {
     background-color: #fff;
-    width: 314px;
+    width: 100%;
+    @media (min-width: $tablet) {
+      width: 314px;
+    }
   }
   .classmates__list {
     flex-direction: column;
@@ -261,7 +268,7 @@
     align-items: flex-start;
     padding-top: 0;
     &--stack {
-      height: 272px;
+      min-height: 272px;
     }
   }
 }
@@ -272,10 +279,16 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 30px;
+  width: 100%;
   @media (min-width: $tablet) {
     flex-direction: row;
+    width: auto;
   }
   .info__card-block {
     height: fit-content;
+    width: 100%;
+    @media (min-width: $tablet) {
+      width: 314px;
+    }
   }
 }
