--- a/src/scss/blocks/_page-header.scss
+++ b/src/scss/blocks/_page-header.scss
@@ -72,6 +72,7 @@
         top: 0;
         transform: rotate(90deg);
       }
+
     }
 
     position: absolute;
@@ -106,6 +107,7 @@
     align-items: center;
     justify-content: space-between;
     width: 267px;
+    padding: 11px 0;
   }
   @media (min-width: $mobile) {
     width: 100%;
