--- a/src/scss/general/scaffolding.scss
+++ b/src/scss/general/scaffolding.scss
@@ -105,22 +105,22 @@ img {
 
 //custom scrollbar
 
-::-webkit-scrollbar-track
+.scrollbar-custom>*::-webkit-scrollbar-track
 {
   background-color: transparent;
 }
 
-::-webkit-scrollbar
+.scrollbar-custom>*::-webkit-scrollbar
 {
   width: 2px;
   background-color: rgba(241, 244, 249, 1);
 }
 
-::-webkit-scrollbar-thumb
+.scrollbar-custom>*::-webkit-scrollbar-thumb
 {
   background-color: rgba(52, 100, 224, 1);
 }
 
-::-webkit-scrollbar-corner {
+.scrollbar-custom>*::-webkit-scrollbar-corner {
   background-color: transparent;
 }
