Доделал menu-toggle, покрасил иконки в футере, сделал анимации для кнопок, поменял размеры, сменил оформление картинки на главной

--- a/src/pug/sections/_enter.pug
+++ b/src/pug/sections/_enter.pug
@@ -2,5 +2,6 @@ section.enter
     .enter__wrapper
         picture.enter__background
             img(src="img/main.jpg" alt="Главный корпус РГСУ")
-        h1 Студенческий портал
-        button(type="button").enter__button Войти в личный кабинет
+        h1 Цифровая среда РГСУ
+        p.enter__subtitle Единое информационное <br>и сервисное пространством университета
+        button(type="button").enter__button.btn.btn--transparent Войти в личный кабинет
