--- a/src/pug/sections/_footer.pug
+++ b/src/pug/sections/_footer.pug
@@ -15,7 +15,7 @@ footer.footer
                 li.footer__message-item.footer__message-item--mail
                     a(href="mailto:info@rgsu.net").footer__message-link.footer__message-link--mail Интернет приемная
                         svg(width="23" height="18")
-                            use(xlink:href="img/icons/icons.svg#email" fill="#FFF")
+                            use(href="img/icons/icons.svg#email" fill="#FFF")
                 li.footer__message-item
                     a(href="mailto:info@rgsu.net").footer__message-link.footer__message-link--telegram
                         img(src="img/telegram-light.svg" alt="Написать нам в Телеграм" width='36' height='36')
@@ -34,16 +34,16 @@ footer.footer
                 ul.social-block__list.footer__list
                     li.social-block__item
                         a(href="mailto:info@rgsu.net").social-block__link.social-block__link--vk Вконтакте
-                            svg(fill="#C3CAD6" width="18" height="11")
-                                use(xlink:href="#vk")
+                            svg(width="18" height="11")
+                                use(href="#vk")
                     li.social-block__item
                         a(href="mailto:info@rgsu.net").social-block__link.social-block__link--fb Фейсбук
-                            svg(fill="#C3CAD6" width="8" height="16")
-                                use(xlink:href="#fb")
+                            svg(width="8" height="16")
+                                use(href="#fb")
                     li.social-block__item
                         a(href="mailto:info@rgsu.net").social-block__link.social-block__link--insta Инстаграм
-                            svg(fill="#C3CAD6" width="16" height="16")
-                                use(xlink:href="#insta")
+                            svg(width="16" height="16")
+                                use(href="#insta")
     hr
     ul.footer__policy.footer__section.footer__list
         li.footer__policy-item
