--- a/src/scss/blocks/_page-header.scss
+++ b/src/scss/blocks/_page-header.scss
@@ -14,6 +14,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
 }
 
 .page-header__sidebar {
@@ -62,6 +63,7 @@
     }
   }
   &--active {
+    height: 100%;
     .toggler-element {
       transform: rotate(45deg);
       &::before {
@@ -72,13 +74,10 @@
         top: 0;
         transform: rotate(90deg);
       }
-
     }
-
     position: absolute;
     top: 0;
     left: 0;
-    height: 69px;
     width: 54px;
     background-color: #F8FAFE;
     .toggler-element {
@@ -274,6 +273,10 @@
     &::after {
       transform: rotate(-45deg);
     }
+    &:focus {
+      box-shadow: inset 0 0 1px 2px rgba(0,0,0,0.1);
+      border-radius: 50px;
+    }
   }
   @media (min-width: $tablet) {
     .page-header--menu-opened & {
@@ -329,7 +332,7 @@
 
     .page-header--menu-opened & {
       display: block;
-      position: static;
+      position: relative;
     }
   }
 }
