--- a/src/scss/general/mixes.scss
+++ b/src/scss/general/mixes.scss
@@ -53,6 +53,9 @@
 	margin: 0 11px 0 0;
 	font-style: normal;
 	font-weight: normal;
+	@media (max-width: $mobile) {
+	  font-size: 1.325rem;
+	}
   }
   &--s {
 	font-size: rem-calc(24);
