--- a/src/pug/sections/_banner.pug
+++ b/src/pug/sections/_banner.pug
@@ -2,7 +2,9 @@ section.banner
     .banner__wrapper
         .banner__item.banner__item--more
             a.banner__link(href="#")
-                img.banner__image(src="img/banner-covid.jpg" alt="Баннер Covid-19 информация")
+                picture
+                    source(srcset="img/banner-covid.webp" type="image/webp")
+                    img.banner__image(src="img/banner-covid.jpg" alt="Баннер Covid-19 информация")
                 .banner__info.banner__info--more
                     span.banner__info-title COVID-19
                     span.banner__info-description Актуальная информация
