--- a/src/scss/blocks/_banner.scss
+++ b/src/scss/blocks/_banner.scss
@@ -6,6 +6,14 @@
 
 .banner__image {
   width: 100%;
+  object-fit: cover;
+  height: 208px;
+}
+
+.banner__item {
+  flex: 0 0 100%;
+  max-width: 100%;
+  max-height: 208px;
 }
 
 .banner__info {
@@ -47,7 +55,3 @@
   transition: transform 0.6s ease;
 }
 
-.banner__item {
-  flex: 0 0 100%;
-  max-width: 100%;
-}
