--- a/src/scss/blocks/_login.scss
+++ b/src/scss/blocks/_login.scss
@@ -30,7 +30,7 @@
       top: 75px;
       left: -58px;
       transition: 0.2s;
-      animation: none;
+      animation: fadeIn .5s;
       &::after {
         content: "";
         position: absolute;
