Изменил флаги на Emoji

--- a/src/pug/sections/_main-vacancy.pug
+++ b/src/pug/sections/_main-vacancy.pug
@@ -86,10 +86,7 @@ main.main
                         .filter__education
                             h4.filter__title.title--aside Область
                             .filter__education-options
-                                span.filter__education-option IT
-                                    button.filter__education-option--delete
-                                span.filter__education-option Бухгалтерия
-                                    button.filter__education-option--delete
+                                include select/_select
                         .filter__salary
                             h4.filter__title.title--aside Заработная плата
                             .filter__range.two-range-slider.js-two-range-slider
