--- a/src/pug/sections/_portfolio-cards.pug
+++ b/src/pug/sections/_portfolio-cards.pug
@@ -200,12 +200,7 @@ section.portfolio-cards
                 .filter__education
                     h4.filter__title.title--aside Уровень образования
                     .filter__education-options
-                        span.filter__education-option Аспирантура
-                            button.filter__education-option--delete
-                        span.filter__education-option Бакалавр
-                            button.filter__education-option--delete
-                        span.filter__education-option Магистр
-                            button.filter__education-option--delete
+                        include select/_select
                 .filter__salary
                     h4.filter__title.title--aside Желаемая заработная плата
                     .filter__range.two-range-slider.js-two-range-slider
