--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -40,6 +40,7 @@
 @import "blocks/filter";
 @import "blocks/two-ranged-slider";
 @import "blocks/pagination";
+@import "blocks/select";
 
 //digital-profile
 
