--- a/src/scss/blocks/_filter.scss
+++ b/src/scss/blocks/_filter.scss
@@ -103,8 +103,8 @@
 //disabled
 
 .filter__checkbox:disabled + .filter__checkbox-visible {
-  border: 1px solid #c3cad6;
-  background: #c3cad6;
+  border: 1px solid $c-grey;
+  background: $c-grey;
   &::before {
     display: none;
   }
@@ -143,7 +143,6 @@
 }
 
 .filter__education-options {
-  border: 1px solid #F1F4F9;
   box-sizing: border-box;
   border-radius: 4px;
   display: flex;
