--- a/src/scss/blocks/_login.scss
+++ b/src/scss/blocks/_login.scss
@@ -50,6 +50,7 @@
     font-size: 18px;
     line-height: 26px;
     padding: 18px 0 15px 25px;
+    color: $c-black;
   }
 }
 .login__navigation--exit {
